Tidying and dark mode fixes

--- a/pages/big-ideas-little-pictures.module.css
+++ b/pages/big-ideas-little-pictures.module.css
@@ -3,3 +3,11 @@
   height: auto;
   width: 100%;
 }
+
+.blockquote p:not(:last-child) {
+  margin-bottom: 1rem;
+}
+
+.cite {
+  font-style: normal;
+}
